kafka/zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zk-hs
  labels:
    app: zk
spec:
  ports:
  - port: 2888
    name: server
  - port: 3888
    name: leader-election
  clusterIP: None
  selector:
    app: zk
---
apiVersion: v1
kind: Service
metadata:
  name: zk-cs
  labels:
    app: zk
spec:
  ports:
  - port: 2181
    name: client
  selector:
    app: zk
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zk
spec:
  selector:
    matchLabels:
      app: zk
  serviceName: zk-hs
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: zk
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - zk
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: kubernetes-zookeeper
        imagePullPolicy: IfNotPresent
        image: "qtdocker/zookeeper:3.9.0"
        command: ["/bin/bash", "-c", "/opt/start.sh"]
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
        readinessProbe:
          tcpSocket:
            port: 2181
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 2181
          initialDelaySeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: datadir
          mountPath: /opt/zookeeper/data
        - name: start-sh
          mountPath: /opt/start.sh
          subPath: start.sh
        - name: zoo-config
          mountPath: /opt/zookeeper/conf/zoo.cfg
          subPath: zoo.cfg
          readOnly: false
      volumes:
        - name: datadir
          hostPath:
            path: /opt/zookepper/data
        - name: start-sh
          configMap:
            name: zk-cm
            defaultMode: 511
        - name: zoo-config
          configMap:
            name: zk-cm
            defaultMode: 511
